--- a/src/app/issue-report/issue-report.component.html
+++ b/src/app/issue-report/issue-report.component.html
@@ -33,3 +33,15 @@
     <button class="btn btn-primary" type="submit">Create</button>
     <button class="btn" type="button" (click)="formClose.emit()">Cancel</button>
 </form>
+<div class="clr-row" *ngIf="suggestions.length">
+    <div class="clr-col-lg-2"></div>
+    <div class="clr-col-lg-6">
+        <clr-stack-view>
+            <clr-stack-header>Similar issues</clr-stack-header>
+            <clr-stack-block *ngFor="let issue of suggestions">
+                <clr-stack-label>#{{issue.issueNo}}: {{issue.title}}</clr-stack-label>
+                <clr-stack-content>{{issue.description}}</clr-stack-content>
+            </clr-stack-block>
+        </clr-stack-view>
+    </div>
+</div>
