--- a/src/app/issue-list/issue-list.component.html
+++ b/src/app/issue-list/issue-list.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="showReportIssue === false">
+<ng-container *ngIf="showReportIssue === false && showEditIssue === false">
     <button class="btn btn-primary" (click)="showReportIssue = true">Add new issue</button>
     <clr-datagrid>
         <clr-dg-column [clrDgField]="'issueNo'">Issue No</clr-dg-column>
@@ -8,6 +8,7 @@
         <clr-dg-column [clrDgField]="'priority'">Priority</clr-dg-column>
         <clr-dg-row *clrDgItems="let issue of issues">
             <clr-dg-action-overflow>
+                <button class="action-item" (click)="selectedIssue = issue; showEditIssue = true">Edit</button>
                 <button class="action-item" (click)="selectedIssue = issue">Resolve</button>
             </clr-dg-action-overflow>
             <clr-dg-cell>{{issue.issueNo}}</clr-dg-cell>
@@ -15,7 +16,9 @@
             <clr-dg-cell>{{issue.title}}</clr-dg-cell>
             <clr-dg-cell>{{issue.description}}</clr-dg-cell>
             <clr-dg-cell>
-                <span class="label" [class.label-danger]="issue.priority === 'high'">{{issue.priority}}</span>
+                <span class="label" [class.label-danger]="issue.priority === 'high'">
+                {{issue.priority}}
+                </span>
             </clr-dg-cell>
         </clr-dg-row>
         <clr-dg-footer>{{issues.length}} issues</clr-dg-footer>
@@ -24,7 +27,11 @@
 <app-issue-report *ngIf="showReportIssue == true" 
     (formClose)="onCloseReport()">
 </app-issue-report>
-<app-confirm-dialog *ngIf="selectedIssue" 
+<app-issue-edit *ngIf="showEditIssue == true && selectedIssue"
+    [issue] = "selectedIssue"
+    (formClose)="onCloseEdit()">
+</app-issue-edit>
+<app-confirm-dialog *ngIf="selectedIssue && !showEditIssue" 
     [issueNo]="selectedIssue.issueNo" 
     (confirm)="onConfirm($event)">
 </app-confirm-dialog>
